--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=535px, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R464BB0435"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-R464BB0435');
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
@@ -16,15 +25,15 @@
     <!-- ogp -->
 	<meta property="og:title" content="動く！パタパタ時計 カラー設定（for OBS）">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="/ogp-share.jpg">
-	<meta property="og:url" content="https://">
+	<meta property="og:image" content="https://sawaragismith.github.io/patapataClock/ogp-share.jpg">
+	<meta property="og:url" content="https://sawaragismith.github.io/patapataClock/">
 	<meta property="og:description" content="OBSで使える動きのあるパタパタ時計 (flip clock) です。簡単カラーカスタマイズ！">
 	<!-- twitter -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="https://">
+	<meta name="twitter:image" content="https://sawaragismith.github.io/patapataClock/">
 	<!-- icon -->
-	<link rel="shortcut icon" href="./images/">
-	<link rel="apple-touch-icon" href="./images/">
+	<link rel="shortcut icon" href="https://sawaragismith.github.io/patapataClock/">
+	<link rel="apple-touch-icon" href="https://sawaragismith.github.io/patapataClock/">
 
 
     <link rel="stylesheet" href="./gpickr/gpickr.min.css">
