--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <!-- ogp -->
 	<meta property="og:title" content="動く！パタパタ時計 カラー設定（for OBS）">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://sawaragismith.github.io/patapataClock/ogp-share.jpg">
+	<meta property="og:image" content="https://sawaragismith.github.io/patapataClock/img/ogp-share.jpg">
 	<meta property="og:url" content="https://sawaragismith.github.io/patapataClock/">
 	<meta property="og:description" content="OBSで使える動きのあるパタパタ時計 (flip clock) です。簡単カラーカスタマイズ！">
 	<!-- twitter -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="https://sawaragismith.github.io/patapataClock/">
+	<meta name="twitter:image" content="https://sawaragismith.github.io/patapataClock/img/ogp-share.jpg">
 	<!-- icon -->
-	<link rel="shortcut icon" href="https://sawaragismith.github.io/patapataClock/">
-	<link rel="apple-touch-icon" href="https://sawaragismith.github.io/patapataClock/">
+	<link rel="shortcut icon" href="https://sawaragismith.github.io/patapataClock/img/favicon.ico">
+	<link rel="apple-touch-icon" href="https://sawaragismith.github.io/patapataClock/img/apple-touch-icon.png">
 
 
     <link rel="stylesheet" href="./gpickr/gpickr.min.css">
