--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=535px, initial-scale=1.0">
+    <meta name="viewport" content="width=535,initial-scale=0.72">
     <meta name="format-detection" content="telephone=no">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
